tests/transpiler/x/java/string_compare.error
exit status 1
Main.java:4: error: bad operand types for binary operator '<'
        System.out.println("a" < "b");
                               ^
  first type:  String
  second type: String
Main.java:5: error: bad operand types for binary operator '<='
        System.out.println("a" <= "a");
                               ^
  first type:  String
  second type: String
Main.java:6: error: bad operand types for binary operator '>'
        System.out.println("b" > "a");
                               ^
  first type:  String
  second type: String
Main.java:7: error: bad operand types for binary operator '>='
        System.out.println("b" >= "b");
                               ^
  first type:  String
  second type: String
4 errors
